manifests/dev/homepage/Deployment-homepage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/name: homepage
    app.kubernetes.io/version: latest
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: homepage
      app.kubernetes.io/name: homepage
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: homepage
        app.kubernetes.io/name: homepage
    spec:
      containers:
        - env:
            - name: TZ
              value: Etc/UTC
            - name: HOMEPAGE_ALLOWED_HOSTS
              value: homepage.home.kronkltd.net
            - name: HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY
              valueFrom:
                secretKeyRef:
                  key: AUDIOBOOKSHELF_API_KEY
                  name: homepage-widget-secrets
            - name: HOMEPAGE_VAR_IMMICH_API_KEY
              valueFrom:
                secretKeyRef:
                  key: IMMICH_API_KEY
                  name: homepage-widget-secrets
            - name: HOMEPAGE_VAR_KOMGA_API_KEY
              valueFrom:
                secretKeyRef:
                  key: KOMGA_API_KEY
                  name: homepage-widget-secrets
            - name: HOMEPAGE_VAR_LIDARR_API_KEY
              valueFrom:
                secretKeyRef:
                  key: LIDARR_API_KEY
                  name: homepage-widget-secrets
            - name: HOMEPAGE_VAR_PLEX_API_KEY
              valueFrom:
                secretKeyRef:
                  key: PLEX_API_KEY
                  name: homepage-widget-secrets
            - name: HOMEPAGE_VAR_PROWLARR_API_KEY
              valueFrom:
                secretKeyRef:
                  key: PROWLARR_API_KEY
                  name: homepage-widget-secrets
            - name: HOMEPAGE_VAR_RADARR_API_KEY
              valueFrom:
                secretKeyRef:
                  key: RADARR_API_KEY
                  name: homepage-widget-secrets
            - name: HOMEPAGE_VAR_SABNZBD_API_KEY
              valueFrom:
                secretKeyRef:
                  key: SABNZBD_API_KEY
                  name: homepage-widget-secrets
            - name: HOMEPAGE_VAR_SONARR_API_KEY
              valueFrom:
                secretKeyRef:
                  key: SONARR_API_KEY
                  name: homepage-widget-secrets
            - name: HOMEPAGE_VAR_STASHAPP_API_KEY
              valueFrom:
                secretKeyRef:
                  key: STASHAPP_API_KEY
                  name: homepage-widget-secrets
            - name: HOMEPAGE_VAR_TRILIUM_API_KEY
              valueFrom:
                secretKeyRef:
                  key: TRILIUM_API_KEY
                  name: homepage-widget-secrets
          image: ghcr.io/gethomepage/homepage:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Host
                  value: localhost:3000
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: homepage
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Host
                  value: localhost:3000
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /app/config
              name: config
            - mountPath: /config-src
              name: config-src
              readOnly: true
      volumes:
        - emptyDir: {}
          name: config
        - configMap:
            name: homepage-config
          name: config-src
