manifests/dev/homepage/Ingress-homepage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: homepage
  namespace: homepage
spec:
  ingressClassName: traefik
  rules:
    - host: homepage.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: homepage
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - homepage.home.kronkltd.net
      secretName: homepage-tls
